# oxybar

./: .gitignore  Cargo.toml
src/: application.rs  bar.rs  block.rs  config.rs  macros.rs  main.rs  modules.rs  utils.rs  widgets.rs
src/widgets/: mod.rs  text.rs  workspace.rs
styles/: app.css
tests/: config.toml
