[package]
name = "oxybar"
version = "0.1.0"
authors = ["Kim Desrosiers <kimdesro@gmail.com>"]

[dependencies]
chrono = "0.4.3"
clap = "2.31.2"
relm = "^0.14.0"
relm-derive = "^0.14.0"
gtk = "^0.4.0"
sys-info = "*"
xcb = "0.8.2"
xcb-util = {version = "0.2.0", features = ["ewmh", "thread"]}
gdk-sys = "0.6.0"
toml = "0.4.6"
serde = "1.0.69"
serde_derive = "1.0.69"

[dependencies.gdk]
version = "0.8.0"
features = ["v3_22"]